--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
       http-equiv="refresh"
       content="0; URL='https://ai-chen-hsieh.github.io/Twitter-2023/'"
     />
-    <title>Todolist 404 redirect</title>
+    <title>404 redirect</title>
   </head>
   <body></body>
 </html>
